--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
   <body>
     <header></header>
     <main>
-      <section></section>
+      <section>
+        <form id="form_id">
+          <div>
+            <label for="name">Cual es tu nombre?</label>
+            <input type="text" id="name" name="name" />
+          </div>
+          <div>
+            <p>Que es mas radio?</p>
+            <input type="radio" id="p1r1" name="p1" value="1" />
+            <label for="p1r1">Opcion 1</label>
+            <input type="radio" id="p1r2" name="p1" value="2" />
+            <label for="p1r2">Opcion 2</label>
+            <input type="radio" id="p1r3" name="p1" value="3" />
+            <label for="p1r3">Opcion 3</label>
+            <input type="radio" id="p1r4" name="p1" value="4" />
+            <label for="p1r4">Opcion 4</label>
+          </div>
+          <div>
+            <p>Que es mas checkbox?</p>
+            <input type="checkbox" id="p1c1" name="p2" value="1" />
+            <label for="p1c1">Opcion 1</label>
+            <input type="checkbox" id="p1c2" name="p2" value="2" />
+            <label for="p1c2">Opcion 2</label>
+            <input type="checkbox" id="p1c3" name="p2" value="3" />
+            <label for="p1c3">Opcion 3</label>
+            <input type="checkbox" id="p1c4" name="p2" value="4" />
+            <label for="p1c4">Opcion 4</label>
+          </div>
+          <input type="submit" value="Enviar" />
+        </form>
+      </section>
     </main>
     <footer></footer>
   </body>
