--- a/index.html
+++ b/index.html
@@ -3,43 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="form.js"></script>
+    <link rel="stylesheet" href="base.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>Dioses</title>
   </head>
   <body>
     <header></header>
     <main>
       <section>
-        <form id="form_id">
-          <div>
-            <label for="name">Cual es tu nombre?</label>
-            <input type="text" id="name" name="name" />
-          </div>
-          <div>
-            <p>Que es mas radio?</p>
-            <input type="radio" id="p1r1" name="p1" value="1" />
-            <label for="p1r1">Opcion 1</label>
-            <input type="radio" id="p1r2" name="p1" value="2" />
-            <label for="p1r2">Opcion 2</label>
-            <input type="radio" id="p1r3" name="p1" value="3" />
-            <label for="p1r3">Opcion 3</label>
-            <input type="radio" id="p1r4" name="p1" value="4" />
-            <label for="p1r4">Opcion 4</label>
-          </div>
-          <div>
-            <p>Que es mas checkbox?</p>
-            <input type="checkbox" id="p1c1" name="p2" value="1" />
-            <label for="p1c1">Opcion 1</label>
-            <input type="checkbox" id="p1c2" name="p2" value="2" />
-            <label for="p1c2">Opcion 2</label>
-            <input type="checkbox" id="p1c3" name="p2" value="3" />
-            <label for="p1c3">Opcion 3</label>
-            <input type="checkbox" id="p1c4" name="p2" value="4" />
-            <label for="p1c4">Opcion 4</label>
-          </div>
-          <input type="submit" value="Enviar" />
-        </form>
+        <h1>Bienvenido a ¿cual deidad eres?</h1>
+        <p>
+         Respondiendo una serie de preguntas
+          descubriras cual es la deidad <br>que mas te representa, ¿listo para
+          averiguarlo?</br></br>
+        </p>
+        <button onClick="location.href='./preguntas.html'">empezar</button>
       </section>
     </main>
     <footer></footer>
