slider java buttons

--- a/preguntas.html
+++ b/preguntas.html
@@ -13,7 +13,7 @@
     <main>
       <section class="questions_container">
         <div id="slider_container">
-          <form class="slider">
+          <form id="slider">
             <div id="pregunta1">
               <label for="p1">1. ¿como te llamas?</label>
               <input type="text" id="Q1" name="Q1" />
@@ -117,7 +117,15 @@
                 <p>calmado</p>
               </div>
             </div>
-            <div id="pregunta5">img</div>
+            <div id="pregunta5">
+              <p>5. ¿que tipo de ambiente prefieres para relajarte?</p>
+              <!--<div class="img_container">
+                <div><img src="./img/prado.jpg" alt="" /></div>
+                <div><img src="./img/fiesta.jpg" alt="" /></div>
+                <div><img src="./img/cabaña.png" alt="" /></div>
+                <div><img src="./img/lugar_vista_al_mar.jpg" alt="" /></div>
+              </div> -->
+            </div>
             <div id="pregunta6">
               <p id="text_p6">
                 6. ¿con cual de estos valores te identificas mas?
@@ -151,8 +159,8 @@
           </form>
         </div>
         <div class="botones_container">
-          <img id="flecha1" src="./img/flechas.png" alt="" />
-          <img id="flecha2" src="./img/flechas.png" alt="" />
+          <img id="flecha_back" src="./img/flechas.png" alt="" />
+          <img id="flecha_forward" src="./img/flechas.png" alt="" />
         </div>
       </section>
     </main>
