--- a/preguntas.html
+++ b/preguntas.html
@@ -119,12 +119,12 @@
             </div>
             <div id="pregunta5">
               <p>5. ¿que tipo de ambiente prefieres para relajarte?</p>
-              <!--<div class="img_container">
+              <div class="img_container">
                 <div><img src="./img/prado.jpg" alt="" /></div>
                 <div><img src="./img/fiesta.jpg" alt="" /></div>
                 <div><img src="./img/cabaña.png" alt="" /></div>
                 <div><img src="./img/lugar_vista_al_mar.jpg" alt="" /></div>
-              </div> -->
+              </div>
             </div>
             <div id="pregunta6">
               <p id="text_p6">
