preguntas con puntos

--- a/preguntas.html
+++ b/preguntas.html
@@ -23,19 +23,34 @@
               <p>2. ¿con cual de estos valores te identificas mas?</p>
               <div class="p2-radio-cont">
                 <div>
-                  <input type="radio" id="p2r1" name="p2" value="1" />
+                  <input
+                    type="radio"
+                    id="p2r1"
+                    name="p2"
+                    value="zeus,afrodita"
+                  />
                   <label for="p1r1">Poder</label>
                 </div>
                 <div>
-                  <input type="radio" id="p2r2" name="p2" value="2" />
+                  <input
+                    type="radio"
+                    id="p2r2"
+                    name="p2"
+                    value="anubis,buddah"
+                  />
                   <label for="p1r2">Justicia</label>
                 </div>
                 <div>
-                  <input type="radio" id="p2r3" name="p2" value="3" />
+                  <input type="radio" id="p2r3" name="p2" value="baldur,loki" />
                   <label for="p1r3">Protección</label>
                 </div>
                 <div>
-                  <input type="radio" id="p2r4" name="p2" value="4" />
+                  <input
+                    type="radio"
+                    id="p2r4"
+                    name="p2"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p1r4">Belleza</label>
                 </div>
               </div>
@@ -48,14 +63,24 @@
 
               <div class="p3_container">
                 <div>
-                  <input type="checkbox" id="p3r1" name="p3" value="1" />
+                  <input
+                    type="checkbox"
+                    id="p3r1"
+                    name="p3"
+                    value="baldur,loki"
+                  />
                   <label for="p3r1"
                     >"soy amoroso pero a veces me cuesta perdonar"</label
                   >
                 </div>
 
                 <div>
-                  <input type="checkbox" id="p3r2" name="p3" value="2" />
+                  <input
+                    type="checkbox"
+                    id="p3r2"
+                    name="p3"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p3r2"
                     >"soy sabio pero a veces me dejo llevar por la
                     impulsividad"</label
@@ -63,7 +88,12 @@
                 </div>
 
                 <div>
-                  <input type="checkbox" id="p3r3" name="p3" value="3" />
+                  <input
+                    type="checkbox"
+                    id="p3r3"
+                    name="p3"
+                    value="zeus,afrodita"
+                  />
                   <label for="p3r3"
                     >"soy leal pero a veces me cuesta confiar en los
                     demas"</label
@@ -71,14 +101,24 @@
                 </div>
 
                 <div>
-                  <input type="checkbox" id="p3r4" name="p3" value="4" />
+                  <input
+                    type="checkbox"
+                    id="p3r4"
+                    name="p3"
+                    value="loki,buddah"
+                  />
                   <label for="p3r4"
                     >"soy astuto pero a veces mis planes me salen mal"</label
                   >
                 </div>
 
                 <div>
-                  <input type="checkbox" id="p3r5" name="p3" value="5" />
+                  <input
+                    type="checkbox"
+                    id="p3r5"
+                    name="p3"
+                    value="zeus,buddah"
+                  />
                   <label for="p3r5"
                     >"soy justo pero a veces me dejo llevar por la
                     venganza"</label
@@ -86,7 +126,12 @@
                 </div>
 
                 <div>
-                  <input type="checkbox" id="p3r6" name="p3" value="6" />
+                  <input
+                    type="checkbox"
+                    id="p3r6"
+                    name="p3"
+                    value="afrodita,sekhmet"
+                  />
                   <label for="p3r6"
                     >"soy curioso pero a veces mi curiosidad me mete en
                     problemas"</label
@@ -94,7 +139,12 @@
                 </div>
 
                 <div>
-                  <input type="checkbox" id="p3r7" name="p3" value="7" />
+                  <input
+                    type="checkbox"
+                    id="p3r7"
+                    name="p3"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p3r7"
                     >"soy protector pero a veces me vuelvo demasiado
                     posesivo"</label
@@ -102,7 +152,12 @@
                 </div>
 
                 <div>
-                  <input type="checkbox" id="p3r8" name="p3" value="8" />
+                  <input
+                    type="checkbox"
+                    id="p3r8"
+                    name="p3"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p3r8"
                     >"soy generoso pero a veces me olvido de cuidar de mi
                     mismo"</label
@@ -123,25 +178,45 @@
               <div class="img_container">
                 <div>
                   <label for="p5r1">
-                    <input type="radio" id="p5r1" name="p5" value="1" />
+                    <input
+                      type="radio"
+                      id="p5r1"
+                      name="p5"
+                      value="sekhmet,sungwukong"
+                    />
                     <img src="./img/prado.jpg" alt="" />
                   </label>
                 </div>
                 <div>
                   <label for="p5r2">
-                    <input type="radio" id="p5r2" name="p5" value="2" />
+                    <input
+                      type="radio"
+                      id="p5r2"
+                      name="p5"
+                      value="sekhmet,sungwukong"
+                    />
                     <img src="./img/fiesta.jpg" alt="" />
                   </label>
                 </div>
                 <div>
                   <label for="p5r3">
-                    <input type="radio" id="p5r3" name="p5" value="3" />
+                    <input
+                      type="radio"
+                      id="p5r3"
+                      name="p5"
+                      value="sekhmet,sungwukong"
+                    />
                     <img src="./img/cabaña.png" alt="" />
                   </label>
                 </div>
                 <div>
                   <label for="p5r4">
-                    <input type="radio" id="p5r4" name="p5" value="4" />
+                    <input
+                      type="radio"
+                      id="p5r4"
+                      name="p5"
+                      value="sekhmet,sungwukong"
+                    />
                     <img src="./img/lugar_vista_al_mar.jpg" alt="" />
                   </label>
                 </div>
@@ -154,25 +229,50 @@
 
               <div class="p6_container">
                 <div>
-                  <input type="radio" id="p6r1" name="p6" value="1" />
+                  <input
+                    type="radio"
+                    id="p6r1"
+                    name="p6"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p1r1">el lider que toma desiciones</label>
                 </div>
                 <div>
-                  <input type="radio" id="p6r2" name="p6" value="2" />
+                  <input
+                    type="radio"
+                    id="p6r2"
+                    name="p6"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p1r2">el alma de la fiesta</label>
                 </div>
                 <div>
-                  <input type="radio" id="p6r3" name="p6" value="3" />
+                  <input
+                    type="radio"
+                    id="p6r3"
+                    name="p6"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p1r3">el consejero que escucha a los demas</label>
                 </div>
                 <div>
-                  <input type="radio" id="p6r4" name="p6" value="4" />
+                  <input
+                    type="radio"
+                    id="p6r4"
+                    name="p6"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p1r4"
                     >el observador que analiza las interacciones</label
                   >
                 </div>
                 <div>
-                  <input type="radio" id="p6r5" name="p6" value="5" />
+                  <input
+                    type="radio"
+                    id="p6r5"
+                    name="p6"
+                    value="sekhmet,sungwukong"
+                  />
                   <label for="p1r4">el que interactua hasta con el perro</label>
                 </div>
               </div>
